# gravity-os

./: .buckconfig  .gitignore  BUCK  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  make_disk.sh  reindeer.toml  test_load.bzl
.cargo/: config.toml
.github/workflows/: ci.yml
kernel/: BUCK  Cargo.toml  linker.ld
kernel/src/: boot.s  heap.rs  ipc.rs  main.rs  process.rs  scheduler.rs  switch.s  tarfs.rs  vectors.s  vfs.rs  virtio.rs
src/demo-app/: BUCK  Cargo.toml  build.rs
src/demo-app/src/: main.rs
src/demo-lib/: BUCK  Cargo.toml
src/demo-lib/src/: lib.rs
src/kernel/: BUCK  Cargo.toml  package.nix
src/kernel/src/: block.rs  boot.s  heap.rs  hfsfs.rs  ipc.rs  macho.rs  main.rs  mmu.rs  process.rs  scheduler.rs  switch.s  vectors.s  vfs.rs  virtio.rs  zalloc.rs
src/lib/apple-dmg/: BUCK  Cargo.toml  lib.rs  mbr.rs  package.nix
src/lib/dyld/: BUCK  Cargo.toml  build.rs  linker.ld  package.nix
src/lib/dyld/src/: cache.rs  macho.rs  main.rs
src/lib/hfsplus/: BUCK  hfs_strings.rs  internal.rs  lib.rs  package.nix
src/lib/ipsw-downloader/: BUCK  Cargo.toml  package.nix
src/lib/vfdecrypt/: BUCK  Cargo.toml  lib.rs  package.nix
src/setup/: BUCK  rules.bzl
src/tools/gravity-setup/: BUCK  Cargo.toml  package.nix
src/tools/gravity-setup/src/: main.rs
src/tools/ipsw/: BUCK  Cargo.toml  package.nix
src/tools/linker-wrapper/: BUCK  Cargo.toml  main.rs  package.nix
src/tools/make-disk/: BUCK
src/tools/make-disk/src/: main.rs
toolchains/: BUCK  cxx.bzl
user/.cargo/: config.toml
user/src/: main.rs
